--- a/apps/admin/view/default/common/head.html
+++ b/apps/admin/view/default/common/head.html
@@ -63,11 +63,11 @@
        
        {if([$one_area])}
 	       	<li class="layui-nav-item">
-	       		<a href="{url./admin/Index/loginOut}"><i class="fa fa-sign-out" aria-hidden="true"></i> 退出登陆</a>
+	       		<a href="{url./admin/Index/loginOut}"><i class="fa fa-sign-out" aria-hidden="true"></i> 退出登录</a>
 	       	</li>
        {else}
 	       	<li class="layui-nav-item layui-hide-xs">
-	       		<a href="{url./admin/Index/loginOut}"><i class="fa fa-sign-out" aria-hidden="true"></i> 退出登陆</a>
+	       		<a href="{url./admin/Index/loginOut}"><i class="fa fa-sign-out" aria-hidden="true"></i> 退出登录</a>
 	       	</li>
        {/if}
        <li class="layui-nav-item layui-hide-xs">
@@ -121,7 +121,7 @@
         
         {if(![$one_area])}
         <li class="layui-nav-item layui-hide-sm">
-         <a href="{url./admin/Index/loginOut}"><i class="fa fa-sign-out" aria-hidden="true"></i> 退出登陆</a>
+         <a href="{url./admin/Index/loginOut}"><i class="fa fa-sign-out" aria-hidden="true"></i> 退出登录</a>
         </li>
         {/if}
       </ul>
