--- a/apps/admin/view/default/index.html
+++ b/apps/admin/view/default/index.html
@@ -50,7 +50,7 @@
 				</div>
 				{/if}
 				<div class="layui-form-item">
-					<button class="layui-btn layui-btn-fluid" lay-submit lay-filter="login-submit" >登 入</button>
+					<button class="layui-btn layui-btn-fluid" lay-submit lay-filter="login-submit" >登 录</button>
 				</div>
 				<div style="color:red;" id="note"></div>
 			</div>
