--- a/apps/admin/view/default/system/user.html
+++ b/apps/admin/view/default/system/user.html
@@ -37,7 +37,7 @@
 	                    <th>用户角色</th>
 	                    <th>登录次数</th>
 	                    <th>最后登录IP</th>
-	                    <th>最后登陆时间</th>
+	                    <th>最后登录时间</th>
 	                    <th>操作</th>
 	                </tr>
 	                
