--- a/apps/admin/view/default/content/slide.html
+++ b/apps/admin/view/default/content/slide.html
@@ -54,17 +54,11 @@
 	  			<div class="layui-form-item">
                      <label class="layui-form-label">分组</label>
                      <div class="layui-input-block">
-                     	<select name="gid" lay-verify="required">	
-	                		<option value="1">分组1</option>
-	                		<option value="2">分组2</option>
-	                		<option value="3">分组3</option>
-	                		<option value="4">分组4</option>
-	                		<option value="5">分组5</option>
-	                		<option value="6">分组6</option>
-	                		<option value="7">分组7</option>
-	                		<option value="8">分组8</option>
-	                		<option value="9">分组9</option>
-	                		<option value="10">分组10</option>
+                     	<select name="gid" >	
+                     		<option value="" >新增分组</option>
+                     		{foreach $gids(key,value)}
+	                			<option value="[value]" >分组[value]</option>
+	                		{/foreach}
 	                	</select>
                      </div>
                 </div>
@@ -133,16 +127,9 @@
                      <label class="layui-form-label">分组</label>
                      <div class="layui-input-block">
                      	<select name="gid" lay-verify="required">	
-	                		<option value="1" {if([$slide->gid]==1)}selected{/if}>分组1</option>
-	                		<option value="2" {if([$slide->gid]==2)}selected{/if}>分组2</option>
-	                		<option value="3" {if([$slide->gid]==3)}selected{/if}>分组3</option>
-	                		<option value="4" {if([$slide->gid]==4)}selected{/if}>分组4</option>
-	                		<option value="5" {if([$slide->gid]==5)}selected{/if}>分组5</option>
-	                		<option value="6" {if([$slide->gid]==6)}selected{/if}>分组6</option>
-	                		<option value="7" {if([$slide->gid]==7)}selected{/if}>分组7</option>
-	                		<option value="8" {if([$slide->gid]==8)}selected{/if}>分组8</option>
-	                		<option value="9" {if([$slide->gid]==9)}selected{/if}>分组9</option>
-	                		<option value="10" {if([$slide->gid]==10)}selected{/if}>分组10</option>
+	                		{foreach $gids(key,value)}
+	                			<option value="[value]" {if([$slide->gid]==$value)}selected{/if}>分组[value]</option>
+	                		{/foreach}
 	                	</select>
                      </div>
                 </div>
