--- a/apps/admin/view/default/system/server.html
+++ b/apps/admin/view/default/system/server.html
@@ -102,7 +102,7 @@
 						
 						<tr>
 						    <th>会话路径</th>
-						    <td>{$server->session_save_path} <a href="{url./admin/Index/clearCache/delall/1}">【清理会话】</a></td>
+						    <td>{$server->session_save_path} </td>
 						</tr>
 						
 						<tr>
