--- a/apps/admin/view/default/common/head.html
+++ b/apps/admin/view/default/common/head.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="renderer"  content="webkit">
   <title>PbootCMS管理中心-V{APP_VERSION}-{RELEASE_TIME}</title>
   <link rel="shortcut icon" href="{SITE_DIR}/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="{APP_THEME_DIR}/layui/css/layui.css?v=v2.3.0">
-  <link rel="stylesheet" href="{APP_THEME_DIR}/font-awesome/css/font-awesome.min.css?V4.7.0" type="text/css">
-  <link rel="stylesheet" href="{APP_THEME_DIR}/css/comm.css?v=v1.3.6">
+  <link rel="stylesheet" href="{APP_THEME_DIR}/layui/css/layui.css?v=v2.5.4">
+  <link rel="stylesheet" href="{APP_THEME_DIR}/font-awesome/css/font-awesome.min.css?v=v4.7.0" type="text/css">
+  <link rel="stylesheet" href="{APP_THEME_DIR}/css/comm.css?v=v1.4.1">
   <link href="{APP_THEME_DIR}/css/jquery.treetable.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="{APP_THEME_DIR}/js/jquery-1.12.4.min.js"></script>
   <script type="text/javascript" src="{APP_THEME_DIR}/js/jquery.treetable.js"></script>
- 
 </head>
 
 <body class="layui-layout-body">
@@ -91,8 +91,8 @@
           <dl class="layui-nav-child">
 			{if($value->mcode=='M130')}
 				 {foreach $menu_models(key3,value3,num3)}
-				 	{if($value3->type==1 && $value3->mcode==1)}
-						<dd><a href="{url./admin/Single/index}"><i class="fa fa-file-text-o" aria-hidden="true"></i>[value3->name]内容</a></dd>
+				 	{if($value3->type==1)}
+						<dd><a href="{url./admin/Single/index/mcode/'.$value3->mcode.'}"><i class="fa fa-file-text-o" aria-hidden="true"></i>[value3->name]内容</a></dd>
 					{/if}
 					{if($value3->type==2)}
 						<dd><a href="{url./admin/Content/index/mcode/'.$value3->mcode.'}"><i class="fa fa-file-text-o" aria-hidden="true"></i>[value3->name]内容</a></dd>
