--- a/apps/admin/view/default/index.html
+++ b/apps/admin/view/default/index.html
@@ -44,7 +44,7 @@
 						</div>
 						<div class="layui-col-xs5 layui-col-sm4">
 							<div style="margin-left: 10px;"> 
-								<img title="点击刷新"  src="{CORE_DIR}/code.php" class="user-login-codeimg" onclick="this.src='{CORE_DIR}/code.php?'+Math.round(Math.random()*10);" />
+								<img title="点击刷新"  src="{CORE_DIR}/code.php" class="user-login-codeimg" id="codeimg" onclick="this.src='{CORE_DIR}/code.php?'+Math.round(Math.random()*10);" />
 						    </div>
 						</div>
 					</div>
