--- a/apps/admin/view/default/system/user.html
+++ b/apps/admin/view/default/system/user.html
@@ -48,10 +48,14 @@
 	                    <td>[value->username]</td>
 	                    <td>[value->realname]</td>
 	                    <td>
-	                        {if($value->status)}
-	                        <a href="{url./admin/'.C.'/mod/ucode/'.$value->ucode.'/field/status/value/0}"><i class='fa fa-toggle-on' title="点击关闭"></i></a>
-	                        {else}
-	                        <a href="{url./admin/'.C.'/mod/ucode/'.$value->ucode.'/field/status/value/1}"><i class='fa fa-toggle-off' title="点击开启"></i></a>
+	                    	{if($value->ucode=='10001')}
+	                    		<i class='fa fa-toggle-on' title="超级管理员不可操作"></i>
+	                    	{else}
+		                        {if($value->status)}
+		                        <a href="{url./admin/'.C.'/mod/ucode/'.$value->ucode.'/field/status/value/0}"><i class='fa fa-toggle-on' title="点击关闭"></i></a>
+		                        {else}
+		                        <a href="{url./admin/'.C.'/mod/ucode/'.$value->ucode.'/field/status/value/1}"><i class='fa fa-toggle-off' title="点击开启"></i></a>
+		                        {/if}
 	                        {/if}
 	                    </td>
 	                    <td>[value->rolename]</td>
@@ -59,10 +63,13 @@
 	                    <td>{fun=@long2ip($value->last_login_ip)}</td>
 	                    <td>[value->update_time]</td>
 	                    <td>
-	                    	{if($value->id!=1)}
+	                    	{if($value->ucode=='10001')}
+	                        	不可操作
+	                        {else}
 	                        	{fun=get_btn_del($value->ucode,'ucode')}
+	                        	{fun=get_btn_mod($value->ucode,'ucode')}
 	                        {/if}
-	                        {fun=get_btn_mod($value->ucode,'ucode')}
+	                        
 	                    </td>
 	                </tr>
 	                {/foreach}
