--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -304,6 +304,16 @@
 	                     	<input type="text" name="watermark_text" value="{$configs.watermark_text.value}" placeholder="请输入水印文字，如：PbootCMS" class="layui-input">
 	                     </div>
 	                </div>
+					
+					<div class="layui-form-item">
+	                     <label class="layui-form-label">文字字体</label>
+	                     <div class="layui-input-inline">
+	                     	<input type="text" name="watermark_text_font" id="watermark_text_font" value="{$configs.watermark_text_font.value}" placeholder="请上传水印文字字体"  class="layui-input">
+	                     </div>
+	                     <button type="button" class="layui-btn file" data-des="watermark_text_font">
+						 	 <i class="layui-icon">&#xe67c;</i>上传字体
+						 </button>
+	                </div>
 	                
 	                <div class="layui-form-item">
 	                      <label class="layui-form-label">文字大小</label>
