--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -325,7 +325,7 @@
 	                <div class="layui-form-item">
 	                      <label class="layui-form-label">文字颜色</label>
 	                     <div class="layui-input-inline">
-	                     	<input type="text" name="watermark_text_color" value="{$configs.watermark_text_color.value}" placeholder="请输入水印文字颜色，如：100, 100, 100" class="layui-input">
+	                     	<input type="text" name="watermark_text_color" value="{$configs.watermark_text_color.value}" placeholder="请输入水印文字颜色，如：100,100,100" class="layui-input">
 	                     </div>
 	                </div>
 	                
