--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -94,6 +94,13 @@
 		                     </div>
 		                </div>
 		                
+		                <div class="layui-form-item">
+		                     <label class="layui-form-label">内链替换次数</label>
+		                     <div class="layui-input-inline">
+		                     	<input type="text" name="content_tags_replace_num"  value="{$configs.content_tags_replace_num.value}" placeholder="请输入文章内链替换次数，默认3次"  class="layui-input">
+		                     </div>
+		                </div>
+		                
 		                {if(![$configs.sn_user.value])}
 		                
 		                <div class="layui-form-item">
