--- a/apps/admin/view/default/content/contentsort.html
+++ b/apps/admin/view/default/content/contentsort.html
@@ -314,6 +314,14 @@
 		                </div>
 		                
 		                <div class="layui-form-item">
+		                     <label class="layui-form-label">同步子栏目模板</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="modsub" value="1" title="是">
+								<input type="radio" name="modsub" value="0" title="否" checked>
+		                     </div>
+		                </div> 
+		                
+		                <div class="layui-form-item">
 		                     <label class="layui-form-label">状态</label>
 		                     <div class="layui-input-block">
 		                     	<input type="radio" name="status" value="1" title="显示" {if([$sort->status]==1)}checked="checked"{/if}>
